{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 37,
  "lineage": "881ee567-0794-20d3-3f9f-4b41769c4efb",
  "resources": [
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:973302516471:security-group/sg-04de4b574ff4b072e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-04de4b574ff4b072e",
            "ingress": [],
            "name": "eks-debug-cluster-cluster-2025072510130911440000000b",
            "name_prefix": "eks-debug-cluster-cluster-",
            "owner_id": "973302516471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-debug-cluster-cluster"
            },
            "tags_all": {
              "Name": "eks-debug-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-082e7556ea8d190d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:973302516471:security-group/sg-087a67d9111efee27",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-087a67d9111efee27",
            "ingress": [],
            "name": "eks-debug-cluster-node-2025072510130911380000000a",
            "name_prefix": "eks-debug-cluster-node-",
            "owner_id": "973302516471",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-debug-cluster-node",
              "kubernetes.io/cluster/eks-debug-cluster": "owned"
            },
            "tags_all": {
              "Name": "eks-debug-cluster-node",
              "kubernetes.io/cluster/eks-debug-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-082e7556ea8d190d0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3710366580",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04de4b574ff4b072e",
            "security_group_rule_id": "sgr-0d9f1444c7ecf2259",
            "self": false,
            "source_security_group_id": "sg-087a67d9111efee27",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3416950792",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0ba39653015fd04eb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1896340734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0c95778c81baedf7e",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3754185572",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0434cb36e9a3948e3",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-377894130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-008ee29bf25dd2f11",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-98175187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0e5e401c8bd346904",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1635466008",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-007ec51cae64019d4",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2450249224",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0caadb4b408413e7a",
            "self": false,
            "source_security_group_id": "sg-04de4b574ff4b072e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-800206682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0e22378d5e0600585",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2111861969",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-0e33a9f835d5b5e50",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3653228350",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-087a67d9111efee27",
            "security_group_rule_id": "sgr-004877157c1ff96ce",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:973302516471:subnet/subnet-0d276ba9fa56d25e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d276ba9fa56d25e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973302516471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-082e7556ea8d190d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:973302516471:subnet/subnet-00585412aef7f1469",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00585412aef7f1469",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "973302516471",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-082e7556ea8d190d0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:973302516471:vpc/vpc-082e7556ea8d190d0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041bf5f0c40b33a4d",
            "default_route_table_id": "rtb-0daaf355bd7b14b88",
            "default_security_group_id": "sg-0f27c72ef359cc4e6",
            "dhcp_options_id": "dopt-08c176218dd30b621",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-082e7556ea8d190d0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0daaf355bd7b14b88",
            "owner_id": "973302516471",
            "tags": {
              "Name": "eks-debug-vpc"
            },
            "tags_all": {
              "Name": "eks-debug-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}